--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="main"></div>
+    <div id="game">
+        <div>Level: <span id="level">0</span></div>
+        <div>Score: <span id="score">0</span></div>
+        <div class="main"></div>
+      </div>
     <script src="script.js"></script>
 </body>
 </html>
