Some styles and info

--- a/index.html
+++ b/index.html
@@ -8,15 +8,22 @@
 </head>
 <body>
     <div id="game">
-        <button id="start">Start</button>
-      <button id="pause">Pause</button>
+    
       <div>Level: <span id="level">0</span></div>
       <div>Score: <span id="score">0</span></div>
 
       <div class="main"></div>
       <div id="game-over">Game over</div>
       <div id="next-tetro"></div>
+      <div class="info">
+        <button id="start">Start</button>
+        <button id="pause">Pause</button>
+          <h3>Instructions</h3>
+          <p>Desktop version. Use directional keys asleft, right, down to rotate tetro. Up key to rotate and space key to move down fast.<br />
+        There are five levels.
+        </p>
       </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
